--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "author": "Peyton, Nathan, Aditiya, Niyati, Hugh, Daniel",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "request": "^2.88.2"
   }
 }
