--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "author": "Peyton, Nathan, Aditiya, Niyati, Hugh, Daniel",
   "license": "MIT",
   "dependencies": {
+    "alphavantage": "^1.2.6",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "request": "^2.88.2"
   }
