--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,12 @@
   "author": "Peyton, Nathan, Aditiya, Niyati, Hugh, Daniel",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "mongoose": "^5.9.1",
+    "passport": "^0.4.1",
     "request": "^2.88.2"
   }
 }
