--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.9.1",
     "passport": "^0.4.1",
-    "request": "^2.88.2"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2",
+    "session": "^0.1.0"
   }
 }
