--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,14 @@
   "license": "MIT",
   "dependencies": {
     "alphavantage": "^1.2.6",
+    "async-waterfall": "^0.1.5",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
+    "q": "^1.5.1",
     "request": "^2.88.2"
   }
 }
