--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "d3-dsv": "^1.2.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "d3-dsv": "^1.2.0",
     "history": "^4.10.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
