--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Peyton, Nathan, Aditiya, Niyati, Hugh, Daniel",
+  "author": "Peyton, Nathan, Aditya, Niyati, Hugh, Daniel",
   "license": "MIT",
   "dependencies": {
     "alphavantage": "^1.2.6",
