--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.0",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
+    "nodemailer": "^6.4.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "q": "^1.5.1",
