--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "q": "^1.5.1",
+    "randomstring": "^1.1.5",
     "request": "^2.88.2",
     "session": "^0.1.0"
   }
