--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,15 @@ on:
 jobs:
   test_pull_request:
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./frontend
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-        working-directory: ./frontend
       - run: npm ci
+        working-directory: ${{env.working-directory}}
       - run: npm run build
+        working-directory: ${{env.working-directory}}
