--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test_pull_request:
+  test_frontend_compiles:
     runs-on: ubuntu-latest
     env:
       working-directory: ./frontend
