running some stuff on the backend now

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,17 @@ jobs:
   test_frontend_compiles:
     runs-on: ubuntu-latest
     env:
-      working-directory: ./frontend
+      frontend: ./frontend
+      backend: ./backend
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - run: npm i
+        working-directory: ${{env.backend}}
       - run: npm ci
-        working-directory: ${{env.working-directory}}
+        working-directory: ${{env.frontend}}
       - run: npm run build
-        working-directory: ${{env.working-directory}}
+        working-directory: ${{env.frontend}}
