--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-stockcharts": "^0.7.8",
-    "zxcvbn": "^4.4.2"
+    "zxcvbn": "^4.4.2",
     "styled-components": "^5.0.1"
   },
   "scripts": {
