--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,16 @@ jobs:
         working-directory: ${{env.frontend}}
       - run: npm run build
         working-directory: ${{env.frontend}}
+  test_backend_syntax:
+    runs-on: ubuntu-latest
+    env:
+      frontend: ./frontend
+      backend: ./backend
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: node -c *.js
+        working-directory: ./backend
