added some testing stuff

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         working-directory: ${{env.backend}}
       - run: npm ci
         working-directory: ${{env.frontend}}
+      - run: npm run test
+        working-directory: ${{env.frontend}}
       - run: npm run build
         working-directory: ${{env.frontend}}
   test_backend_syntax:
