--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         working-directory: ${{env.backend}}
       - run: npm ci
         working-directory: ${{env.frontend}}
-      - run: npm run test
+      - run: npm test
         working-directory: ${{env.frontend}}
       - run: npm run build
         working-directory: ${{env.frontend}}
