--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,16 @@
   "description": "backend for FINEX project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Peyton, Nathan, Aditya, Niyati, Hugh, Daniel",
   "license": "MIT",
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "dependencies": {
     "alphavantage": "^2.0.1",
     "async-waterfall": "^0.1.5",
@@ -18,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "jest": "^25.1.0",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
     "nodemailer": "^6.4.5",
