first test working using stubs and mocks

--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "q": "^1.5.1",
     "randomstring": "^1.1.5",
     "request": "^2.88.2",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "supertest": "^4.0.2"
   }
 }
