Added backend tests to CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,18 @@ jobs:
         working-directory: ${{env.frontend}}
       - run: npm run build
         working-directory: ${{env.frontend}}
+  test_backend:
+    runs-on: ubuntu-latest
+    env:
+      frontend: ./frontend
+      backend: ./backend
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: npm i
+      - run: npm test
   test_backend_syntax:
     runs-on: ubuntu-latest
     env:
