--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,60 +15,14 @@ jobs:
   test_frontend_compiles:
     runs-on: ubuntu-latest
     env:
-      frontend: ./frontend
-      backend: ./backend
+      working-directory: ./frontend
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm i
-        working-directory: ${{env.backend}}
       - run: npm ci
-        working-directory: ${{env.frontend}}
-      - run: npm test
-        working-directory: ${{env.frontend}}
+        working-directory: ${{env.working-directory}}
       - run: npm run build
-        working-directory: ${{env.frontend}}
-  test_backend:
-    runs-on: ubuntu-latest
-    env:
-      frontend: ./frontend
-      backend: ./backend
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: npm i
-        working-directory: ./backend
-      - run: npm test
-        working-directory: ./backend
-  test_backend_syntax:
-    runs-on: ubuntu-latest
-    env:
-      frontend: ./frontend
-      backend: ./backend
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: node -c *.js
-        working-directory: ./backend
-      - run: node -c *.js
-        working-directory: ./backend/Controllers
-      - run: node -c *.js
-        working-directory: ./backend/database
-      - run: node -c *.js
-        working-directory: ./backend/database/models
-      - run: node -c *.js
-        working-directory: ./backend/DatabaseAccess
-      - run: node -c *.js
-        working-directory: ./backend/passport
-      - run: node -c *.js
-        working-directory: ./backend/Routers
-      - run: node -c *.js
-        working-directory: ./backend/Services
+        working-directory: ${{env.working-directory}}
