--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,12 @@
   "description": "backend for FINEX project",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Peyton, Nathan, Aditya, Niyati, Hugh, Daniel",
   "license": "MIT",
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
   "dependencies": {
-    "alphavantage": "^2.0.1",
+    "alphavantage": "^1.2.6",
     "async-waterfall": "^0.1.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -24,16 +18,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "jest": "^25.1.0",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
-    "nodemailer": "^6.4.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "q": "^1.5.1",
-    "randomstring": "^1.1.5",
     "request": "^2.88.2",
-    "session": "^0.1.0",
-    "supertest": "^4.0.2"
+    "session": "^0.1.0"
   }
 }
