--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,35 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "d3-dsv": "^1.2.0",
-    "emotion-theming": "^10.0.27",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "history": "^4.10.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-color": "^2.18.0",
-    "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "react-stockcharts": "^0.7.8",
-    "react-test-renderer": "^16.13.1",
-    "recharts": "^1.8.5",
-    "styled-components": "^5.0.1",
-    "zxcvbn": "^4.4.2"
+    "react-stockcharts": "^0.7.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
