--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-share": "^4.1.0",
     "react-stockcharts": "^0.7.8",
     "react-test-renderer": "^16.13.1",
     "recharts": "^1.8.5",
