--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         working-directory: ${{env.frontend}}
       - run: npm test
         working-directory: ${{env.frontend}}
-      - run: npm run build
+      - run: CI=false npm run build
         working-directory: ${{env.frontend}}
   test_backend:
     runs-on: ubuntu-latest
