--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-color": "^2.18.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-share": "^4.1.0",
