--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "d3-dsv": "^1.2.0",
     "emotion-theming": "^10.0.27",
     "enzyme": "^3.11.0",
@@ -17,6 +18,7 @@
     "history": "^4.10.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-chartjs-2": "^2.9.0",
     "react-color": "^2.18.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
