--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.2",
+    "react-image-crop": "^8.6.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-share": "^4.1.0",
