--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "backend for FINEX project",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node app.js"
   },
   "author": "Peyton, Nathan, Aditya, Niyati, Hugh, Daniel",
   "license": "MIT",
@@ -21,6 +22,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "connect-mongo": "^3.2.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
