made the app work in local and deployed mode now

--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # [START app_yaml]
-service: frontend
+service: default
 env: flex
 runtime: nodejs
 # [END app_yaml]
