--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "connect-mongo": "^3.2.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "jest": "^25.1.0",
