--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,8 @@
     "jest": "^25.1.0",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
