Added testing for my components, also edited package.json scripts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "local": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false",
+    "test": "react-scripts test --watchAll=false --silent",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
