--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "config": "^3.3.1",
     "connect-mongo": "^3.2.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
