--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -12,6 +12,6 @@
 # limitations under the License.
 # [START app_yaml]
 service: default
-env: flex
-runtime: nodejs
+env: standard
+runtime: nodejs10
 # [END app_yaml]
